import-service/k8s/base/import-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: import-service
    app.openshift.io/runtime: quarkus
    app.kubernetes.io/part-of: right-lyrics
  name: import-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: import-service
  strategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: import-service
    spec:
      containers:
        - image: quay.io/right-lyrics/import-service:1.0
          imagePullPolicy: Always
          name: import-service
          ports:
            - containerPort: 8080
