import-service/k8s/base/import-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: import-service
  name: import-service
spec:
  ports:
    - name: tcp-8080
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: import-service
