import-service/k8s/base/import-ingress.yaml

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: import
spec:
  rules:
    - host: right.lyrics
      http:
        paths:
          - path: /api/import
            backend:
              serviceName: import-service
              servicePort: 8080
